# patrol

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile
caddy/: Dockerfile  caddyfile.go  go.mod  go.sum  patrol.go
db/: schema.sql
db/migrations/: 20240109201731_create_users.sql  20240111183444_create_roles.sql  20240112121632_create_sessions.sql
src/: is_first_admin_registered.rs  keys.rs  main.rs  token.rs  well_known.rs
src/api/: jwks.rs  mod.rs
src/crypto/: hashing.rs  mod.rs
src/models/: mod.rs  roles.rs  tokens.rs  users.rs  users_roles.rs
src/pages/: account.rs  login.rs  logout.rs  mod.rs  register.rs
src/pages/register/: is_available.rs  mod.rs
templates/: account.html.tera  base.html.tera  login.html.tera  register.html.tera
