[package]
name = "patrol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
argon2 = { version = "0.5.2", features = ["std"] }
base64 = "0.21.7"
chrono = { version = "0.4.31", default-features = false }
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
password-hash = { version = "0.5.0", features = ["std"] }
poem = { version = "2", features = ["anyhow", "cookie"] }
poem-openapi = "4.0.0"
rsa = "0.9.6"
serde = "1.0.195"
serde_json = "1.0.111"
tera = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dependencies.sea-orm]
version = "0.12"
features = [
  "macros",
  "sqlx-postgres",
  "postgres-array",
  "runtime-tokio-rustls",
  "with-chrono",
  "with-uuid",
]
