[package]
name = "patrol"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", default-features = false }
deadpool-redis = "0.16.0"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
log = "0.4.22"
nanoid = "0.4.0"
password-hash = { version = "0.5.0", features = ["std"] }
poem = { version = "3.0.4", features = ["anyhow", "cookie", "embed"] }
pretty_env_logger = "0.5.0"
rsa = "0.9.6"
serde = "1.0.208"
serde_json = "1.0.125"
tera = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
uuid = "1.10.0"

[dependencies.redis]
version = "0.26.1"
default-features = false
features = ["aio", "connection-manager", "tokio-comp", "uuid"]

[dependencies.sea-orm]
version = "1.0.0"
features = [
  "macros",
  "sqlx-postgres",
  "postgres-array",
  "runtime-tokio-rustls",
  "with-chrono",
  "with-uuid",
]
